--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/writetome51/array-get-filtered-results.git"
+  },
   "keywords": [
     "array",
     "manipulation",
@@ -15,6 +19,10 @@
   ],
   "author": "Steve Thompson",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/writetome51/array-get-filtered-results/issues"
+  },
+  "homepage": "https://github.com/writetome51/array-get-filtered-results#readme",
   "devDependencies": {
     "@writetome51/arrays-match": "latest"
   },
