--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@writetome51/array-get-by-test",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Similar to Array.filter(), except it returns array of objects representing each filtered item",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -25,11 +26,8 @@
   },
   "homepage": "https://github.com/writetome51/array-get-by-test#readme",
   "devDependencies": {
-    "@writetome51/arrays-match": "~1.0.5"
+    "@writetome51/arrays-match": "^2.0.0"
   },
   "dependencies": {
-    "error-if-not-array": "~1.0.0",
-    "error-if-not-function": "~1.0.0",
-    "value-index-pair-interface": "~1.0.1"
   }
 }
