--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "homepage": "https://github.com/writetome51/array-get-by-test#readme",
   "devDependencies": {
-    "@writetome51/arrays-match": "^2.0.0"
+    "@writetome51/arrays-match": ">=2.0.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
