--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@writetome51/array-get-by-test",
   "version": "2.0.0",
-  "description": "Similar to Array.filter(), except it returns array of objects representing each filtered item",
+  "description": "Similar to Array.prototype.filter(), except it lets you customize what value to get from the element that passes test",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
