Added generic attributes to Typescript declaration. Upped version to 4.0.0

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "4.0.0",
   "description": "Similar to Array.prototype.filter(), except it lets you customize what value to get from the element that passes test",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc"
   },
